Fixed map overflow problem

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ button { cursor:pointer; }
 #joinGame .joinAction { width:30px; }
 
 /* Setup Page */
-#setupMapPane { width:75%; height:100%; padding:0 0 0 1px; background:#4CC4FC; right:0; }
+#setupMapPane { width:75%; height:100%; padding:0 0 0 1px; background:#4CC4FC; right:0; overflow:hidden; }
 
 #setupSidePane { width:25%; height:100%; left:0; background:#555; }
 #setupSidePane h2 { color:#EEE; text-transform:uppercase; font-size:15px; margin:0 0 15px; padding:0; clear:both; }
